--- a/Faster5/app/src/main/res/layout/info_screen.xml
+++ b/Faster5/app/src/main/res/layout/info_screen.xml
@@ -89,6 +89,7 @@
             android:layout_marginTop="@dimen/layout_marginTop_40">
 
             <ImageView
+                android:id="@+id/imageview_icon_search"
                 android:layout_width="@dimen/layout_width_28"
                 android:layout_height="@dimen/layout_height_25"
                 android:layout_centerInParent="true"
@@ -96,10 +97,13 @@
                 android:background="@drawable/icon_search"
                 android:scaleType="fitXY" />
             <TextView
+                android:id="@+id/textview_time_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-
+                android:textColor="#FFF"
+                android:textSize="@dimen/text_size_huge"
+                android:textStyle="bold"
                 />
         </RelativeLayout>
 
