--- a/Faster5/app/src/main/res/layout/layout_wait_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_wait_popup.xml
@@ -174,6 +174,21 @@
             android:textSize="@dimen/text_size_xxlarge"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/button_cancel"
+            android:layout_width="@dimen/layout_width_250"
+            android:layout_height="@dimen/layout_height_50"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/layout_marginBottom_20"
+            android:layout_marginLeft="@dimen/layout_marginLeft_30"
+            android:layout_marginRight="@dimen/layout_marginRight_30"
+            android:background="@drawable/answer_wrong"
+            android:paddingBottom="@dimen/paddingBottom_10"
+            android:text="@string/btn_cancel_wait_popup"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </RelativeLayout>
