--- a/Faster5/app/src/main/res/values-w360dp/dimens.xml
+++ b/Faster5/app/src/main/res/values-w360dp/dimens.xml
@@ -5,8 +5,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_size_large">18sp</dimen>
+    <dimen name="border_hexa">6dp</dimen>
 
     <dimen name="text_size_small">16sp</dimen>
+
     <dimen name="layout_width_28">28dp</dimen>
     <dimen name="layout_width_40">40dp</dimen>
     <dimen name="layout_width_50">50dp</dimen>
@@ -47,6 +49,7 @@
     <dimen name="layout_marginTop_3">3dp</dimen>
     <dimen name="layout_marginTop_5">5dp</dimen>
     <dimen name="layout_marginTop_10">10dp</dimen>
+    <dimen name="layout_marginTop_13">13dp</dimen>
     <dimen name="layout_marginTop_15">15dp</dimen>
     <dimen name="layout_marginTop_17">17dp</dimen>
     <dimen name="layout_marginTop_18">18dp</dimen>
@@ -56,7 +59,7 @@
     <dimen name="layout_marginTop_60">60dp</dimen>
     <dimen name="layout_marginTop_200">200dp</dimen>
 
-    <dimen name="layout_marginBottom_2">4dp</dimen>
+    <dimen name="layout_marginBottom_2">2dp</dimen>
     <dimen name="layout_marginBottom_3">3dp</dimen>
     <dimen name="layout_marginBottom_4">4dp</dimen>
     <dimen name="layout_marginBottom_10">10dp</dimen>
@@ -111,6 +114,4 @@
 
     <dimen name="civ_border_width">2dp</dimen>
     <dimen name="civ_border_width_1">1dp</dimen>
-
-
 </resources>
