--- a/Faster5/app/src/main/res/layout/layout_maintain_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_maintain_popup.xml
@@ -29,6 +29,7 @@
             android:background="#00366D" />
 
         <TextView
+            android:id="@+id/text_noti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
