--- a/Faster5/app/src/main/res/layout/activity_main.xml
+++ b/Faster5/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,9 @@
         android:text="@string/debug"
         android:textColor="@android:color/white"
         android:textSize="20sp" />
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/debug"/>
 </RelativeLayout>
