--- a/Faster5/app/src/main/res/values/dimens.xml
+++ b/Faster5/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
 
     <dimen name="layout_width_28">28dp</dimen>
     <dimen name="layout_width_40">40dp</dimen>
+    <dimen name="layout_width_45">45dp</dimen>
     <dimen name="layout_width_50">50dp</dimen>
     <dimen name="layout_width_65">65dp</dimen>
     <dimen name="layout_width_70">70dp</dimen>
@@ -54,6 +55,7 @@
     <dimen name="layout_marginTop_1">1dp</dimen>
     <dimen name="layout_marginTop_3">3dp</dimen>
     <dimen name="layout_marginTop_5">5dp</dimen>
+    <dimen name="layout_marginTop_14">14dp</dimen>
     <dimen name="layout_marginTop_10">10dp</dimen>
     <dimen name="layout_marginTop_13">13dp</dimen>
     <dimen name="layout_marginTop_15">15dp</dimen>
@@ -80,6 +82,8 @@
     <dimen name="layout_marginLeft_30">30dp</dimen>
     <dimen name="layout_marginLeft_40">40dp</dimen>
     <dimen name="layout_marginLeft_50">50dp</dimen>
+    <dimen name="layout_marginLeft_54">54dp</dimen>
+    <dimen name="layout_marginLeft_55">55dp</dimen>
     <dimen name="layout_marginLeft_60">60dp</dimen>
     <dimen name="layout_marginLeft_70">70dp</dimen>
     <dimen name="layout_marginLeft_100">100dp</dimen>
