--- a/Faster5/app/src/main/res/layout/game_over.xml
+++ b/Faster5/app/src/main/res/layout/game_over.xml
@@ -1,200 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/xml_bg"
-    android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="@dimen/layout_width_120"
-        android:layout_height="@dimen/layout_height_120"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/layout_marginTop_60"
-        android:background="@drawable/gameover_icon" />
-
-    <TextView
-        android:id="@+id/textview_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/layout_marginTop_30"
-        android:text="@string/title_gameover"
-        android:textAllCaps="true"
-        android:textColor="#fff"
-        android:textSize="@dimen/text_size_xxlarge"
-        android:textStyle="bold" />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/xml_bg">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/layout_marginTop_10"
-        android:orientation="horizontal">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="0dp"
+        <ImageView
+            android:layout_width="@dimen/layout_width_120"
+            android:layout_height="@dimen/layout_height_120"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/layout_marginTop_60"
+            android:background="@drawable/gameover_icon" />
+
+        <TextView
+            android:id="@+id/textview_result"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/layout_marginTop_30"
+            android:text="@string/title_gameover"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold" />
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/imageview_useravatar1"
-                android:layout_width="@dimen/layout_width_50"
-                android:layout_height="@dimen/layout_height_50"
-                android:layout_marginLeft="@dimen/layout_marginLeft_20"
-                android:layout_marginStart="@dimen/layout_marginLeft_20"
-                android:layout_marginTop="@dimen/layout_marginTop_30"
-                android:src="@drawable/avatar"
-                app:civ_border_color="#fff"
-                app:civ_border_width="@dimen/civ_border_width_1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textview_username1"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageview_useravatar1"
-                android:layout_marginLeft="@dimen/layout_marginLeft_5"
-                android:layout_marginStart="@dimen/layout_marginLeft_5"
-                android:layout_toEndOf="@+id/imageview_useravatar1"
-                android:layout_toRightOf="@+id/imageview_useravatar1"
-                android:ellipsize="end"
-                android:lines="1"
-                android:text="@string/player"
+                android:layout_weight="1">
+
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/imageview_useravatar1"
+                    android:layout_width="@dimen/layout_width_50"
+                    android:layout_height="@dimen/layout_height_50"
+                    android:layout_marginLeft="@dimen/layout_marginLeft_20"
+                    android:layout_marginStart="@dimen/layout_marginLeft_20"
+                    android:layout_marginTop="@dimen/layout_marginTop_30"
+                    android:src="@drawable/avatar"
+                    app:civ_border_color="#fff"
+                    app:civ_border_width="@dimen/civ_border_width_1" />
+
+                <TextView
+                    android:id="@+id/textview_username1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/imageview_useravatar1"
+                    android:layout_marginLeft="@dimen/layout_marginLeft_5"
+                    android:layout_marginStart="@dimen/layout_marginLeft_5"
+                    android:layout_toEndOf="@+id/imageview_useravatar1"
+                    android:layout_toRightOf="@+id/imageview_useravatar1"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:text="@string/player"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/text_size_xlarge"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textview_city_user1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/textview_username1"
+                    android:layout_alignStart="@+id/textview_username1"
+                    android:layout_below="@+id/textview_username1"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:text="@string/city"
+                    android:textAllCaps="true"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/text_size_small"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textview_money1"
+                    android:layout_width="@dimen/layout_width_140"
+                    android:layout_height="@dimen/layout_height_35"
+                    android:layout_alignLeft="@+id/imageview_useravatar1"
+                    android:layout_alignStart="@+id/imageview_useravatar1"
+                    android:layout_below="@+id/imageview_useravatar1"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/layout_marginTop_10"
+                    android:background="@drawable/button_money"
+                    android:gravity="center_horizontal"
+                    android:paddingTop="@dimen/paddingTop_6"
+                    android:text="@string/money_default"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/text_size_small"
+                    android:textStyle="bold" />
+
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/imageview_useravatar2"
+                    android:layout_width="@dimen/layout_width_50"
+                    android:layout_height="@dimen/layout_height_50"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginEnd="@dimen/layout_marginLeft_20"
+                    android:layout_marginRight="@dimen/layout_marginLeft_20"
+                    android:layout_marginTop="@dimen/layout_marginTop_30"
+                    android:src="@drawable/avatar"
+                    app:civ_border_color="#fff"
+                    app:civ_border_width="@dimen/civ_border_width_1" />
+
+                <TextView
+                    android:id="@+id/textview_username2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/imageview_useravatar2"
+                    android:layout_marginEnd="@dimen/layout_marginRight_5"
+                    android:layout_marginRight="@dimen/layout_marginRight_5"
+                    android:layout_toLeftOf="@+id/imageview_useravatar2"
+                    android:layout_toStartOf="@+id/imageview_useravatar2"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:text="@string/enemy"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/text_size_xlarge"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textview_city_user2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignRight="@+id/textview_username2"
+                    android:layout_below="@+id/textview_username2"
+                    android:ellipsize="end"
+                    android:lines="1"
+                    android:text="@string/city"
+                    android:textAllCaps="true"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/text_size_small"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textview_money2"
+                    android:layout_width="@dimen/layout_width_140"
+                    android:layout_height="@dimen/layout_height_35"
+                    android:layout_alignEnd="@+id/imageview_useravatar2"
+                    android:layout_alignRight="@+id/imageview_useravatar2"
+                    android:layout_below="@+id/imageview_useravatar2"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/layout_marginTop_10"
+                    android:background="@drawable/button_money2"
+                    android:gravity="center_horizontal"
+                    android:paddingTop="@dimen/paddingTop_6"
+                    android:text="@string/money_default"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/text_size_small"
+                    android:textStyle="bold" />
+                />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/layout_marginTop_30">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/layout_height_2"
+                android:layout_gravity="center_vertical"
+                android:background="#FFF" />
+
+            <Button
+                android:id="@+id/button_backhome"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/layout_height_50"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/layout_marginLeft_100"
+                android:layout_marginRight="@dimen/layout_marginRight_100"
+                android:layout_marginTop="@dimen/layout_marginTop_5"
+                android:background="@drawable/answer0"
+                android:onClick="backInfo"
+                android:paddingBottom="@dimen/paddingBottom_10"
+                android:text="@string/btn_tieptuc"
+                android:textAllCaps="false"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/text_size_xlarge"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textview_city_user1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textview_username1"
-                android:layout_alignStart="@+id/textview_username1"
-                android:layout_below="@+id/textview_username1"
-                android:ellipsize="end"
-                android:lines="1"
-                android:textAllCaps="true"
-                android:text="@string/city"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/text_size_small"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textview_money1"
-                android:layout_width="@dimen/layout_width_140"
-                android:layout_height="@dimen/layout_height_35"
-                android:layout_alignLeft="@+id/imageview_useravatar1"
-                android:layout_alignStart="@+id/imageview_useravatar1"
-                android:layout_below="@+id/imageview_useravatar1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/layout_marginTop_10"
-                android:background="@drawable/button_money"
-                android:gravity="center_horizontal"
-                android:paddingTop="@dimen/paddingTop_6"
-                android:text="@string/money_default"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_small"
-                android:textStyle="bold" />
-
-
-        </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/imageview_useravatar2"
-                android:layout_width="@dimen/layout_width_50"
-                android:layout_height="@dimen/layout_height_50"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="@dimen/layout_marginLeft_20"
-                android:layout_marginRight="@dimen/layout_marginLeft_20"
-                android:layout_marginTop="@dimen/layout_marginTop_30"
-                android:src="@drawable/avatar"
-                app:civ_border_color="#fff"
-                app:civ_border_width="@dimen/civ_border_width_1" />
-
-            <TextView
-                android:id="@+id/textview_username2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/imageview_useravatar2"
-                android:layout_marginEnd="@dimen/layout_marginRight_5"
-                android:layout_marginRight="@dimen/layout_marginRight_5"
-                android:layout_toLeftOf="@+id/imageview_useravatar2"
-                android:layout_toStartOf="@+id/imageview_useravatar2"
-                android:ellipsize="end"
-                android:lines="1"
-                android:text="@string/enemy"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/text_size_xlarge"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textview_city_user2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignRight="@+id/textview_username2"
-                android:layout_below="@+id/textview_username2"
-                android:ellipsize="end"
-                android:lines="1"
-                android:text="@string/city"
-                android:textAllCaps="true"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/text_size_small"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textview_money2"
-                android:layout_width="@dimen/layout_width_140"
-                android:layout_height="@dimen/layout_height_35"
-                android:layout_alignEnd="@+id/imageview_useravatar2"
-                android:layout_alignRight="@+id/imageview_useravatar2"
-                android:layout_below="@+id/imageview_useravatar2"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/layout_marginTop_10"
-                android:background="@drawable/button_money2"
-                android:gravity="center_horizontal"
-                android:paddingTop="@dimen/paddingTop_6"
-                android:text="@string/money_default"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_small"
-                android:textStyle="bold" />
-            />
-        </RelativeLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/layout_marginTop_30">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/layout_height_2"
-            android:layout_gravity="center_vertical"
-            android:background="#FFF" />
-
-        <Button
-            android:id="@+id/button_backhome"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/layout_height_50"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/layout_marginLeft_100"
-            android:layout_marginRight="@dimen/layout_marginRight_100"
-            android:layout_marginTop="@dimen/layout_marginTop_5"
-            android:background="@drawable/answer0"
-            android:onClick="backInfo"
-            android:paddingBottom="@dimen/paddingBottom_10"
-            android:text="@string/btn_tieptuc"
-            android:textAllCaps="false"
-            android:textColor="#ffffff"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textStyle="bold" />
-    </FrameLayout>
-
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
+</RelativeLayout>
