--- a/Faster5/app/src/main/res/layout/info_screen.xml
+++ b/Faster5/app/src/main/res/layout/info_screen.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -144,17 +145,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:id="@+id/ads_view"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:background="#3FFF" />
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/ads_view"
+            android:layout_above="@+id/adView"
             android:clipToPadding="false"
             android:overScrollMode="never"
             android:paddingTop="@dimen/paddingTop_5"
@@ -165,6 +159,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </ScrollView>
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id">
+        </com.google.android.gms.ads.AdView>
     </RelativeLayout>
 
 
