--- a/Faster5/app/src/main/res/layout/play_screen.xml
+++ b/Faster5/app/src/main/res/layout/play_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -287,10 +288,12 @@
             android:layout_marginTop="@dimen/layout_marginTop_20" />
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/ads_view"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#3FFF" />
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
 </RelativeLayout>
