--- a/Faster5/app/src/main/res/layout/game_over.xml
+++ b/Faster5/app/src/main/res/layout/game_over.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/background"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/xml_bg">
 
     <LinearLayout
@@ -11,11 +11,21 @@
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
+        <Button
+            android:layout_width="@dimen/layout_width_50"
+            android:layout_height="@dimen/layout_height_50"
+            android:layout_gravity="end"
+            android:layout_marginEnd="@dimen/layout_marginRight_10"
+            android:layout_marginRight="@dimen/layout_marginRight_10"
+            android:layout_marginTop="@dimen/layout_marginTop_10"
+            android:background="@drawable/report"
+            android:id="@+id/button_report" />
+
         <ImageView
             android:layout_width="@dimen/layout_width_120"
             android:layout_height="@dimen/layout_height_120"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/layout_marginTop_60"
+            android:layout_marginTop="@dimen/layout_marginTop_20"
             android:background="@drawable/gameover_icon" />
 
         <TextView
@@ -34,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_marginTop_10"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -211,5 +222,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
+        ads:adUnitId="@string/banner_ad_unit_id">
+
+    </com.google.android.gms.ads.AdView>
 </RelativeLayout>
