--- a/Faster5/app/src/main/res/layout/layout_report_popup.xml
+++ b/Faster5/app/src/main/res/layout/layout_report_popup.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/layout_marginTop_10"
-            android:text="@string/title_quit_popup"
+            android:text="@string/title_report"
             android:textColor="#00366D"
             android:textSize="@dimen/text_size_huge" />
 
@@ -40,13 +40,13 @@
             android:maxLines="2"
             android:paddingLeft="@dimen/paddingLeft_10"
             android:paddingRight="@dimen/paddingRight_10"
-            android:text="@string/question_quit_popup"
+            android:text="@string/text_report"
             android:textColor="#EEA542"
             android:textSize="@dimen/text_size_xlarge" />
 
 
         <Button
-            android:id="@+id/button_continue"
+            android:id="@+id/button_report"
             android:layout_width="@dimen/layout_width_250"
             android:layout_height="@dimen/layout_height_50"
             android:layout_gravity="center"
@@ -55,7 +55,7 @@
             android:layout_marginTop="@dimen/layout_marginTop_30"
             android:background="@drawable/answer0"
             android:paddingBottom="@dimen/paddingBottom_10"
-            android:text="@string/btnNo_quit_popup"
+            android:text="@string/btn_report"
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="@dimen/text_size_large"
@@ -63,28 +63,21 @@
 
 
         <Button
-            android:id="@+id/button_quit"
+            android:id="@+id/button_cancel"
             android:layout_width="@dimen/layout_width_250"
             android:layout_height="@dimen/layout_height_50"
             android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/layout_marginBottom_10"
             android:layout_marginLeft="@dimen/layout_marginLeft_30"
             android:layout_marginRight="@dimen/layout_marginRight_30"
             android:layout_marginTop="@dimen/layout_marginTop_10"
             android:background="@drawable/answer0"
             android:paddingBottom="@dimen/paddingBottom_10"
-            android:text="@string/btnYes_quit_popup"
+            android:layout_marginBottom="@dimen/layout_marginBottom_20"
+            android:text="@string/btn_close"
             android:textAllCaps="false"
             android:textColor="#ffffff"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imgView_loading"
-            android:layout_width="@dimen/layout_width_200"
-            android:layout_height="@dimen/layout_height_100"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/layout_marginBottom_20"
-            android:layout_marginTop="@dimen/layout_marginTop_5" />
     </LinearLayout>
 </RelativeLayout>
