--- a/Faster5/app/src/main/res/layout/activity_main.xml
+++ b/Faster5/app/src/main/res/layout/activity_main.xml
@@ -55,12 +55,16 @@
         android:id="@+id/debug"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/debug"
+        android:text="@string/debug_res"
+        android:layout_alignParentBottom="true"
         android:textColor="@android:color/white"
         android:textSize="20sp" />
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/imv_debug"
+        android:layout_width="50dp"
+        android:alpha="0.65"
+        android:layout_height="50dp"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:src="@drawable/debug"/>
 </RelativeLayout>
