--- a/Faster5/app/src/main/res/values/dimens.xml
+++ b/Faster5/app/src/main/res/values/dimens.xml
@@ -1,19 +1,20 @@
 <resources>
+    <!-- tested on device w360dp -->
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <!--Text Size-->
     <dimen name="text_size_vsmall">14sp</dimen>
-    <dimen name="text_size_small">15sp</dimen>
     <dimen name="text_size_xsmall">16sp</dimen>
     <dimen name="text_size_large">18sp</dimen>
     <dimen name="text_size_xlarge">20sp</dimen>
     <dimen name="text_size_xxlarge">24sp</dimen>
     <dimen name="text_size_huge">30sp</dimen>
-    <!--Text Size-->
-
     <dimen name="border_hexa">6dp</dimen>
+
+    <dimen name="text_size_small">16sp</dimen>
 
     <dimen name="layout_width_28">28dp</dimen>
     <dimen name="layout_width_40">40dp</dimen>
@@ -127,6 +128,4 @@
 
     <dimen name="civ_border_width">2dp</dimen>
     <dimen name="civ_border_width_1">1dp</dimen>
-
-
 </resources>
