--- a/Faster5/app/src/main/res/values/styles.xml
+++ b/Faster5/app/src/main/res/values/styles.xml
@@ -48,4 +48,11 @@
         <item name="android:windowIsTranslucent">true</item>
 
     </style>
+
+    <style name="RateDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">#FF1493</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColorPrimary">#00366D</item>
+        <item name="android:background">#ffffff</item>
+    </style>
 </resources>
